<resources>
    <string name="app_name">Massive</string>
    <string name="datang1">Mulailah dengan Organizer, daftar, dan gunakan. Sesuaikan dan kembangkan dengan lebih banyak fitur seiring berkembangnya kerja tim Anda.</string>
    <string name="email1">Masukkan Email</string>
    <string name="blmmadaakun">Belum memiliki akun?</string>
    <string name="gabung1">Jadilah Bagian dari TIM KU. Daftar sekarang untuk mengakses alat pengorganisasian acara terbaik. Rencanakan, jalankan, dan buat acara tak terlupakan bersama kami.</string>
    <string name="sdhadaakun">Sudah Memiliki Akun?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ubhprofil">Ubah Profil</string>
    <string name="ubhnama"> Ubah Nama</string>
    <string name="ubhdivisi"> Ubah Divisi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ubhsandi">Ubah Kata Sandi</string>
    <string name="sandilama">Kata Sandi Lama</string>
    <string name="lamasandi">Masukkan Kata Sandi Lama</string>
    <string name="sandibaru">Kata Sandi Baru</string>
    <string name="barusandi">Buat Kata Sandi Baru</string>
    <string name="lupasandi">Lupa kata sandi? Hubungi</string>
    <string name="ulang">Masukkan Kata Sandi Baru</string>
    <string name="admin">Admin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="infoapk">Informasi Aplikasi</string>
    <string name="about">About Eventify</string>
    <string name="about1">Sebuah aplikasi untuk membantu mengelola kegiatan kepanitiaan di dalam kampus.
        \n\nDengan beberapa fitur yang mempermudah koordinasi dan pengelolaan kegiatan mulai dari penjadwalan, rincian panitia, mengelola anggaran, checklist.
        \n\nSerta beberapa fitur tambahan lain yang dapat mengorganisir kegiatan dengan lebih efisien, menjaga jadwal teratur, dan terkelola dengan baik.</string>

    <string name="onboarding1">Berikan Sentuhan Magis pada Setiap Event Anda</string>
    <string name="paragraf1">Selamat bergabung di TIM KU, tempat di mana setiap ide acara Anda menjadi kenyataan. Mulailah perjalanan pengorganisasian acara yang tak terlupakan bersama kami.</string>
    <string name="next">Selanjutnya</string>
    <string name="next1">Lewati</string>
    <string name="next2">Mari Memulai</string>
    <string name="onboarding2">Komitmen Kami Mewujudkan Event Impian Anda</string>
    <string name="onboarding3">Alat Canggih untuk Mengelola Event dengan Lebih Mudah</string>
    <string name="onboarding4">Bergabung, Berkolaborasi, Berkesan.</string>
    <string name="paragraf2">Tekad kami untuk menyederhanakan dan memperindah setiap aspek dalam mengorganisir acara. Dengan tim yang berdedikasi, kami siap mendukung setiap langkah perjalanan acara Anda.</string>
    <string name="paragraf3">Temukan fitur-fitur andalan kami, mulai dari perencanaan jadwal, manajemen peserta, hingga anggaran. Dengan TIM KU, Anda dapat fokus pada kreasi tanpa harus khawatir dengan detail teknis.</string>
    <string name="paragraf4">Ayo bergabung dengan kami! Bersama-sama, kita bisa membuat setiap acara menjadi luar biasa.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="pom">Pekan Olahraga Maha...</string>
    <string name="detail">Pekan Olahraga Mahasiswa merupakan event olahraga yang dikhususkan untuk mahasiswa Internal STIE Bank BPD Jateng.</string>

    <string name="tambahan">Undang beberapa anggota.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="organisasi">Organisasikan Acaramu dengan Mudah</string>
    <string name="rencana">Rencanakan, Undang, dan Atur Acaramu dalam Sekejap</string>
    <string name="solusi">Solusi lengkap yang membantu anda
        \n merencanakan, mengundang, dan mengelola acara
        \n anda dengan mudah.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tandai">Tandai yang sudah dibaca</string>
    <string name="sudah_baca">Sudah dibaca</string>
    <string name="jangan1">Jangan lupa untuk mengikuti Rapat Konsep Final
        \nKamis, 26 Oktober 2023, ya!</string>
    <string name="jangan2">Jangan lupa untuk mengikuti Rapat Konsep 2
        \nSenin, 23 Oktober 2023, ya!</string>
    <string name="jangan3">Jangan lupa untuk mengikuti Rapat Konsep 1
        \nJumat, 20 Oktober 2023, ya!</string>
    <string name="jangan4">Jangan lupa untuk mengikuti Rapat Perdana
        \nRabu, 18 Oktober 2023, ya!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bck_Buat_event">Buat Manajemen Event mu</string>
    <string name="Deskripsi">Membahas visi dan misi Pekan Olahraga Mahasiswa STIE Bank BPD Jateng Tahun 2023, serta ...</string>
    <string name="Desk_event4">Meninjau konsep akhir Pekan Olahraga Mahasiswa. Seluruh aspek acara akan dievaluasi, dan persiapan menuju pelaksanaan acara akan diperinci secara menyeluruh.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tambah_panitia">Tambah Panitia</string>
    <string name="ketua_panitia">Ketua Panitia</string>
    <string name="divisi_acara">Divisi Acara</string>
    <string name="divisi_logistik">Divisi Logistik</string>
    <string name="non_divisi">Non Divisi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="info_lainnya">Email: HimaFPIPS@up.edu\nInstagram: POM.FPIPS\nCP: 088982782192</string>

</resources>