<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UbahKataSandi">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="32dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="146dp"
        android:layout_height="27dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="192dp"
        android:text="@string/ubhsandi"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        tools:layout_editor_absoluteY="48dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="153dp"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        android:text="@string/sandilama"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="325dp"
        android:layout_height="43dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/lamasandi"
        android:inputType="textPassword"
        android:textColor="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="37dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="163dp"
        android:layout_height="24dp"
        android:text="@string/lupasandi"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        tools:layout_editor_absoluteX="37dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="55dp"
        android:layout_height="24dp"
        android:text="@string/admin"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        tools:layout_editor_absoluteX="200dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="123dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/sandibaru"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="325dp"
        android:layout_height="43dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/barusandi"
        android:inputType="textPassword"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="325dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:text="Ubah Kata Sandi"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="187dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:text="@string/ulang"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="325dp"
        android:layout_height="43dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/barusandi"
        android:inputType="textPassword"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>