<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformasiAplikasi">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_infoapk"
        android:layout_width="146dp"
        android:layout_height="27dp"
        android:paddingTop="3dp"
        android:text="@string/infoapk"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/img_entifywarnabu"
        android:layout_width="412dp"
        android:layout_height="138dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue"
        android:src="@drawable/entifywarnabu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_infoapk" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="154dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/about"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_entifywarnabu" />

    <TextView
        android:id="@+id/tv_about1"
        android:layout_width="351dp"
        android:layout_height="178dp"
        android:layout_marginTop="16dp"
        android:text="@string/about1"
        android:textAlignment="textStart"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"

        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/tv_about" />

</androidx.constraintlayout.widget.ConstraintLayout>