<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Onboarding1Activity">

    <ImageView
        android:id="@+id/btn_splesh"
        android:layout_width="300dp"
        android:layout_height="330dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/onboarding1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_text1"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/onboarding1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_splesh" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="326dp"
        android:layout_height="96dp"
        android:layout_marginTop="12dp"
        android:text="@string/paragraf1"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/tv_text1"
        app:layout_constraintStart_toStartOf="@+id/tv_text1"
        app:layout_constraintTop_toBottomOf="@+id/tv_text1"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_slnjut"
        android:layout_width="299dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_blue"
        android:backgroundTint="@color/blue"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_lwt"
        android:layout_width="297dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_grey"
        android:backgroundTint="@color/light_white"
        android:text="@string/next1"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/btn_slnjut"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_slnjut"
        app:layout_constraintTop_toBottomOf="@+id/btn_slnjut" />

    <Button
        android:id="@+id/button3"
        android:layout_width="10dp"
        android:layout_height="13dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.95"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="10dp"
        android:layout_height="13dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.307"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="10dp"
        android:layout_height="13dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.307"
        tools:ignore="MissingConstraints,UnknownId" />


</androidx.constraintlayout.widget.ConstraintLayout>