<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UbahProfile">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tv_ubhprofil"
        android:layout_width="110dp"
        android:layout_height="29dp"
        android:layout_marginTop="25dp"
        android:text="@string/ubhprofil"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toEndOf="@+id/img_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ubhnama"
        android:layout_width="124dp"
        android:layout_height="26dp"
        android:layout_marginTop="60dp"
        android:text="@string/ubhnama"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ubhprofil" />

    <EditText
        android:id="@+id/et_ubhnama"
        android:layout_width="325dp"
        android:layout_height="43dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/ubhnama"
        android:inputType="textPassword"
        android:textColor="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@+id/tv_ubhnama"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="46dp" />

    <TextView
        android:id="@+id/tv_ubhdivisi"
        android:layout_width="116dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/ubhdivisi"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/et_ubhnama"
        tools:layout_editor_absoluteX="46dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_ubhdivisi"
        android:layout_width="325dp"
        android:layout_height="43dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/ubhdivisi"
        android:inputType="textPassword"
        android:textColor="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@+id/tv_ubhdivisi"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="46dp" />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:text="Simpan"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/et_ubhdivisi"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="46dp" />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="32dp"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>